# PrimCom

./: .gitignore  CRONTAB  Makefile  Pipfile  README.md  TODO  add_item.py  call_h.sh  config.py  edit.sh  h.json  h.py  index.html  mk_venv.sh  mypy.ini  params.json  pyproject.toml  requirements.txt  start.sh
apps/: __init__.py  menu.py  pip_github.py  radio.py  secret_key.py  temp_folder.py  venv.py
apps/assets/: radio.csv
assets/: README  alap.py  logo.xcf  logo.xpm  stations.csv
data/: README  flask.json  python.json  shell.json  text.json  urls.json
data/flask/: hello.py
data/python/: PATH.py  asterisks.py  autocomplete.py  bs4_example.py  check_indent.sh  command_output.py  comprehensions.py  concurrent.futures_with_processes.py  concurrent.futures_with_threads.py  curses_wrapper.py  debug_with_ipython.py  decorators.py  django_imports.py  execution_time.py  exitcode_stdout_stderr.py  extract_urls.py  filesize.py  home_dir.py  http_server.sh  ignored_exception.py  import-from-parent-dir.py  inc_string.py  infinity.py  ipnb.sh  join_path.py  join_url.py  memoize.py  my_atexit.py  my_blinker.py  my_defaultdict.py  my_except.py  my_exception.py  my_generator.py  my_itertools.py  my_json.py  my_kill.py  my_lambda.py  my_md5.py  my_optparse.py  my_pickle.py  (+38 more)
lib/: README  clipboard.py  common.py  fs.py  markov_passwords.py  podium.py  simpleflake.py
modules/: README  colored_line_numbers.py  conferences.py  header.py  my_ip.py  pidcheck.py  process.py  radio.py  reddit.py  selected_lines.py  show.py  urlshortener.py  userpass.py
tmp/: .gitignore  README
(+81 files in other folders)
