[project]
name = "primcom-project"
version = "0.1.0"
description = ""
authors = ["Jabba Laci <jabba.laci@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "jinja2>=3.1.6",
    "menu>=3.2.2",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "setuptools>=78.1.0",
    "termcolor>=3.0.1",
]
